fixed overlapping problem

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 250px;
+  height: 300px;
 }
 
 .content-div:hover {
